lox_compiler/src/snapshots/lox_compiler__test__snapshot_conditional_if.snap
---
source: lox_compiler/src/lib.rs
expression: result
---
- "0000    OP_FALSE            "
- 0001    OP_DEFINE_GLOBAL (index=0) x
- 0002    OP_GET_GLOBAL (index=1) x
- 0003    OP_JUMP_IF_FALSE (pos=3)
- "0004    OP_POP              "
- 0005    OP_STRING (index=2) x
- "0006    OP_PRINT            "
