lox_compiler/src/snapshots/lox_compiler__test__snapshot_conditional_or.snap
---
source: lox_compiler/src/lib.rs
expression: result
---
- "0000    OP_TRUE             "
- 0001    OP_DEFINE_GLOBAL (index=0) x
- 0002    OP_GET_GLOBAL (index=1) x
- 0003    OP_JUMP_IF_FALSE (pos=1)
- "0004    OP_JUMP (pos=2)     "
- "0005    OP_POP              "
- "0006    OP_FALSE            "
- 0007    OP_DEFINE_GLOBAL (index=2) bool
- 0008    OP_GET_GLOBAL (index=3) bool
- "0009    OP_PRINT            "
